--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div  class="container">
     <app-navi></app-navi>
         
-    <app-car-image></app-car-image>
+    
     <div class="row">
         <div class="col-md-3" style="padding-top: 20x;">
             <app-brand></app-brand>
@@ -17,3 +17,4 @@
 
     
 </div>
+<app-footer></app-footer>
