--- a/src/app/components/car-image/car-image.component.html
+++ b/src/app/components/car-image/car-image.component.html
@@ -1,24 +1,13 @@
 
-  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-    </ol>
-    <div  *ngFor="let carImage of carImages" class="carousel-inner">
-      <div class="carousel-item active">
-        <img class="d-block w-100" src="https://localhost:5001/Uploads/Images/{{carImage.imagePath}}" alt="First slide">
-      </div>
+<img style="padding-top: 30px;" *ngFor="let image of carImages" class="col-md-12" src="https://localhost:5001/Uploads/Images/{{image.imagePath}}" alt="">
+
+<div style="padding-top: 25px; padding-bottom: 25px;">
+<div  class="card">
+    <h5 class="card-header">{{car?.brandName}}</h5>
+    <div class="card-body">
+      <h5 class="card-title">{{car?.name}}</h5>
+      <p class="card-text">{{car?.descriptions}}</p>
+      <a href="#" class="btn btn-primary">{{car.dailyPrice}} TL'ye Kirala</a>
     </div>
-    <a class="carousel-control-prev" href="carouselExampleIndicators" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="carouselExampleIndicators" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
   </div>
-
-{{car.brandName}}
-
+</div>
