--- a/src/app/components/color/color.component.html
+++ b/src/app/components/color/color.component.html
@@ -1,10 +1,17 @@
 <ul class="list-group">
     <h5>Renk</h5>
+    <div style="margin-bottom: 15px; margin-top: 5px;" class="form-outline">
+        <input [(ngModel)]="filterColorText" type="Aramak istediğiniz renk" id="form1" class="form-control" placeholder="İstediğiniz araç markası" aria-label="Search" />
+      </div>
     <li (click)="CurrentColorClassDefault()" [class]="getAllColorClass()">Tüm Renkler</li>
     <li 
     (click)="setCurrentColor(color)"
     routerLink="/cars/color/{{color.id}}"
     [class]="getCurrentColorClass(color)" 
-    *ngFor="let color of colors"
+    *ngFor="let color of colors|filterColor:filterColorText"
     >{{color.name}}</li>
 </ul>
+
+<div style="margin-top: 20px;" *ngIf="filterColorText.length>0" class="alert-primary col-md-12">
+    {{filterColorText}} ile ilgili ürünler listeliniyor
+  </div>
